syntax = "proto3";

import "google/protobuf/timestamp.proto";

message EventMessage {
  string event_id = 1;
  string request_id = 2;
  string session_id = 3;
  string client_id = 4;
  google.protobuf.Timestamp timestamp = 5;
  string timestamp_formatted = 6;
  string event_name = 7;
  message user {
    string id = 1;
    string email = 2;
    string phone = 3;
    string ip_address = 4;
  }
  message platform {
  }
  message restricted {
  }
  message extensions {
  }
  string persistentSessionId = 8;
}